--- a/src/TheAthlectic/appsettings.Development.json
+++ b/src/TheAthlectic/appsettings.Development.json
@@ -20,11 +20,13 @@
   "Umbraco": {
     "CMS": {
       "ModelsBuilder": {
+        "AcceptUnsafeModelsDirectory": true,
+        "DebugLevel": 1,
         "Enable": true,
-        "ModelsMode": "SourceCodeManual",
-        //"ModelsNamespace": "YourProjectNamespace.Models",
         "FlagOutOfDateModels": true,
-        "ModelsDirectory": "~/Models/Pagemodels"
+        "ModelsDirectory": "~/../TheAthletic.models/Models/PageModels",
+        "ModelsMode": "SourceCodeManual",
+        "ModelsNamespace": "TheAthletic.models"
       },
       "Content": {
         "MacroErrors": "Throw"
